[OOBE] Fix scroll behavior on narrow screens
Increase height of outer container beyond webui height if content overflows

Fix: b:290905108
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4727382
Commit-Queue: Simon Ziegltrum <ziegltrum@google.com>
Cr-Commit-Position: refs/heads/main@{#1176496}

--- a/chrome/browser/resources/chromeos/login/oobe.css
+++ b/chrome/browser/resources/chromeos/login/oobe.css
@@ -186,7 +186,7 @@ Styles related to the `md-screen-container`
 
 #outer-container {
   display: flex;
-  height: 100%;
+  min-height: 100%;
   z-index: 1;
 }
 
